kube-scripts/scripts/flask-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: flask1.ginger-macaron.world
    http:
      paths:
      - path: /?(.*)
        pathType: Prefix
        backend:
          service:
            name: flasksrv
            port:
              number: 50080
