kube-scripts/scripts/macaron.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: macarondb
  namespace: macaron
spec:
  replicas: 1
  selector:
    matchLabels:
      app: macarondb
  template:
    metadata:
      labels:
        app: macarondb
    spec:
      containers:
      - name: pod-mysql
        image: danielchoi1115/macaron-mysql-demo:0.0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: macaron
spec:
  type: NodePort
  selector:
    app: macarondb
  ports:
    - name: mysql-port
      port: 43306
      targetPort: 3306
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mysql-ingress
  namespace: macaron
spec:
  ingressClassName: nginx
  rules:
  - host: macaron.ginger-macaron.world
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: db
            port:
              number: 43306
