kube-scripts/scripts/mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy2-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deploy2-mysql
  template:
    metadata:
      labels:
        app: deploy2-mysql
    spec:
      containers:
      - name: pod-mysql
        image: danielchoi1115/macaron-mysql-demo:0.0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 3306
        resources:
          limits:
            memory: "500Mi"
            cpu: "500m"
          requests:
            memory: "250Mi"
            cpu: "250m"
      - name: adminer
        image: adminer:4.8.1
        ports:
          - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  type: NodePort
  selector:
    app: deploy2-mysql
  ports:
    - name: mysql-port
      port: 3306
      targetPort: 3306
    - name: adminer-port
      port: 43306
      targetPort: 8080

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mysql-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: mysql1.ginger-macaron.world
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: db
            port:
              number: 43306
