kube-scripts/scripts/phpmyadmin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy3-phpmyadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deploy3-phpmyadmin
  template:
    metadata:
      labels:
        app: deploy3-phpmyadmin
    spec:
      containers:
      - name: pod-phpmyadmin
        image: phpmyadmin/phpmyadmin
        ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: phpmyadminsrv
spec:
  type: NodePort
  selector:
    app: deploy3-phpmyadmin
  ports:
  - protocol: TCP
    port: 43307
    targetPort: 80


---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phpmyadmin-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: phpmyadmin1.ginger-macaron.world
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: phpmyadminsrv
            port:
              number: 43307
